force-app/main/default/objects/Sales_Rep_Goal__c/Sales_Rep_Goal__c.object-meta.xml
<CustomObject>
    <label>Sales Rep Goal</label>
    <nameField>
        <displayFormat>Goal - {00000}</displayFormat>
        <label>Sales Rep Goals Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sales Rep Goals</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>