force-app/main/default/objects/Sales_Rep_Goal__c/fields/BRSalesMarginPercentage__c.field-meta.xml
<CustomField>
    <fullName>BRSalesMarginPercentage__c</fullName>
    <label>B/R Sales Margin %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>