force-app/main/default/objects/Sales_Rep_Goal__c/fields/Direct_Sales_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Direct_Sales_Percentage__c</fullName>
    <description>in %</description>
    <inlineHelpText>in %</inlineHelpText>
    <label>Direct Sales Margin %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>