force-app/main/default/objects/Sales_Rep_Goal__c/fields/Margin_Goal__c.field-meta.xml
<CustomField>
    <fullName>Margin_Goal__c</fullName>
    <label>Margin Goal</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>