force-app/main/default/objects/Sales_Rep_Goal__c/fields/Master_Report__c.field-meta.xml
<CustomField>
    <fullName>Master_Report__c</fullName>
    <label>Master Report?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Midwest Machinery</fullName>
            </value>
            <value>
                <fullName>Saint Louis</fullName>
            </value>
            <value>
                <fullName>Oklahoma</fullName>
            </value>
            <value>
                <fullName>Kansas City</fullName>
            </value>
            <value>
                <fullName>Denver</fullName>
            </value>
            <value>
                <fullName>Midwest Industrial Builders</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>