force-app/main/default/objects/Sales_Rep_Goal__c/fields/Resell_Sales_Goal__c.field-meta.xml
<CustomField>
    <fullName>Resell_Sales_Goal__c</fullName>
    <label>Resell Sales Goal</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>