force-app/main/default/objects/Sales_Rep_Goal__c/fields/Revenue_Goal__c.field-meta.xml
<CustomField>
    <fullName>Revenue_Goal__c</fullName>
    <label>Revenue Goal</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>