force-app/main/default/objects/Sales_Rep_Goal__c/fields/Sales_Margin_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Sales_Margin_Percentage__c</fullName>
    <inlineHelpText>In %</inlineHelpText>
    <label>Sales Margin %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>