force-app/main/default/objects/Sales_Rep_Goal__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Sales_Rep__c</columns>
    <columns>Master_Report__c</columns>
    <columns>Year__c</columns>
    <columns>NAME</columns>
    <columns>Resell_Sales_Goal__c</columns>
    <columns>Sales_Margin_Percentage__c</columns>
    <columns>Direct_Sales_Goal__c</columns>
    <columns>Direct_Sales_Percentage__c</columns>
    <columns>Revenue_Goal__c</columns>
    <columns>BRSalesMarginPercentage__c</columns>
    <columns>Margin_Goal__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>